Java language upgrade (#351)
* apply modern java and cleanup implementation in monticore-grammar

* apply even more modern java and cleanup some more implementation in monticore-grammar

* apply modern java and cleanup implementation in monticore-runtime

* apply modern java and cleanup implementation in monticore-generator

* apply modern java and cleanup implementation in monticore-test/it

* add missing dependency to monticore-grammar-emf

* even more cleanup

* fix test

* fix traverser

* revert PrintHelp.ftl

* revert emf namespace uri to http as most tools stick to that to ensure backwards compatibility

* optimize switch case formatting

* apply review

* apply review

* add missing import

* Flos wishes...

* spaces

* minor formatting