@@ -18,7 +18,6 @@ import de.se_rwth.commons.logging.Log;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * relations for SymTypes of wrt. OOSymbols,
@@ -102,7 +101,7 @@ public class OOSymbolsSymTypeRelations {
       List<SymTypeOfFunction> methods =
           name2AbstractMethods.values().stream()
               .flatMap(List::stream)
-              .collect(Collectors.toList());
+              .toList();
       List<SymTypeOfFunction> abstractMethods = methods.stream()
           .filter(m -> OOSymbolsMill.typeDispatcher()
               .isOOSymbolsMethod(m.getSymbol())
@@ -110,9 +109,9 @@ public class OOSymbolsSymTypeRelations {
           .filter(m -> OOSymbolsMill.typeDispatcher()
               .asOOSymbolsMethod(m.getSymbol()).isIsAbstract()
           )
-          .collect(Collectors.toList());
+          .toList();
       if (abstractMethods.size() == 1) {
-        res = Optional.of(abstractMethods.get(0));
+        res = Optional.of(abstractMethods.getFirst());
       }
       else {
         res = Optional.empty();
